# hygeia

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Cross.toml  LICENSE-APACHE  LICENSE-MIT  README.md  appveyor.yml  azure-pipelines-github-release.yml  azure-pipelines.yml  build.rs  commands.txt  docker-compose.yml  extra-packages-to-install.txt  install.ps1  install.sh
.cargo/: config
.github/workflows/: ci.yml  integration.yml  nightly.yml
ci/: before_deploy.ps1  before_deploy.sh  script.sh
coverage/: tarpaulin.sh  tarpaulin_upload_codecov_io.sh
docker/alpine/: Dockerfile
docker/debian/sid/: Dockerfile
docker/fedora/: Dockerfile
docker/kdeneon/: Dockerfile
docker/ubuntu/: Dockerfile
graphviz/: Makefile  install.dot  list.dot  run.dot  select.dot  shim.dot
hygeia_test_helpers/: Cargo.toml
hygeia_test_helpers/src/: lib.rs
pycors_test_helpers/: Cargo.toml
pycors_test_helpers/src/: lib.rs
src/: cache.rs  commands.rs  compile.rs  config.rs  constants.rs  dir_monitor.rs  download.rs  installed.rs  lib.rs  main.rs  os.rs  pycors.rs  selected.rs  settings.rs  shim.rs  toolchain.rs  utils.rs
src/cache/: tests.rs
src/commands/: autocomplete.rs  install.rs  list.rs  path.rs  run.rs  select.rs  setup.rs  use_command.rs  version.rs
src/commands/install/: compile.rs  download.rs  pip.rs  unix.rs  windows.rs
src/commands/setup/: bash.rs  fish.rs  powershell.rs  sh.rs  zsh.rs
src/os/: unix.rs  windows.rs
src/toolchain/: installed.rs  selected.rs  tests.rs
src/utils/: directory.rs
tests/: integration.rs
tests/fixtures/: index.html
tests/fixtures/html/source/: index.html
tests/fixtures/html/windows/: index.html
tests/integration/: help.rs  install.rs  list.rs  mod.rs  path.rs  run.rs  select.rs  setup.rs  version.rs
tests/integration/install/: long_compilation.rs  long_install_many.rs  windows_only.rs
tests/integration/setup/: bash.rs  fish.rs  powershell.rs
tests/print_env_to_stdout/: Cargo.toml
tests/print_env_to_stdout/src/: main.rs
tests/print_file_to_stdout/: Cargo.toml
tests/print_file_to_stdout/src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
