[package]
name = "pycors"
version = "0.1.17"
authors = ["Nicolas Bigaouette <nbigaouette@gmail.com>"]
homepage = "https://github.com/nbigaouette/pycors"
repository = "https://github.com/nbigaouette/pycors"
edition = "2018"

[workspace]
members = [
    "xtask",
]

[dependencies]
console = "0.9"
chrono = { version = "0.4", features = ["serde"] }
dirs = "2"
env_logger = "0.7"
failure = "0.1"
flate2 = "1.0"
git-testament = "0.1"
human-panic = "1.0"
indicatif = "0.13"
lazy_static = "1"
log = "0.4"
prettytable-rs = "0.8"
question = "0.2"
regex = "1"
semver = { version = "0.9", features = ["serde"] }
serde = {version = "1", features =[ "derive"]}
serde_json = "1"
structopt = "0.3"
subprocess = "0.1"
tar = "0.4"
terminal_size = "0.1"
url = { version = "2", features = ["serde"] }
shlex = "0.1"
which = "3"

[dependencies.reqwest]
version = "0.9"
default-features = false
features = ["rustls-tls"]