[package]
name = "hygeia"
version = "0.3.4"
authors = ["Nicolas Bigaouette <nbigaouette@gmail.com>"]
homepage = "https://github.com/nbigaouette/hygeia"
repository = "https://github.com/nbigaouette/hygeia"
edition = "2018"

description = "Python toolchain manager 🐍"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/hygeia"

readme = "README.md"
keywords = ["python"]
categories = ["command-line-utilities", "development-tools"]

[badges]
codecov = { repository = "https://github.com/nbigaouette/hygeia", branch = "master", service = "github" }
maintenance = { status = "actively-developed" }

[workspace]
members = [
    "xtask",
    "tests/print_file_to_stdout",
    "hygeia_test_helpers",
]

[dependencies]
console = "0.9"
chrono = { version = "0.4", features = ["serde"] }
dirs = "2"
env_logger = "0.7"
anyhow = "1.0"
flate2 = "1.0"
git-testament = "0.1"
indicatif = "0.13"
lazy_static = "1"
log = "0.4"
prettytable-rs = "0.8"
question = "0.2"
regex = "1"
select = "0.4"
self_update = { version = "0.12", optional = true, default-features = false, features = ["archive-zip"] }
semver = { version = "0.9", features = ["serde"] }
serde = {version = "1", features =[ "derive"]}
serde_json = "1"
structopt = "0.3"
thiserror = "1.0"
tar = "0.4"
terminal_size = "0.1"
url = { version = "2", features = ["serde"] }
shlex = "0.1"

# Used for downloading
hyper = "0.13"
hyper-tls = "0.4"
tokio = "0.2"
async-trait = "0.1"
bytes = "0.5"
futures = "0.3"

# On Windows
zip = {version = "0.5", default-features = false, features = ["deflate"]}

[dev-dependencies]
mockall = "0.6"
assert_cmd = "0.12"
predicates = "1"
indoc = "0.3"
hygeia_test_helpers = {path = "hygeia_test_helpers"}
rstest = "0.5"
# pretty_assertions = "0.6"

[target.'cfg(not(target_os = "windows"))'.dev-dependencies.users]
version = "0.9"
default_features = false

# On Linux (musl), use the openssl 'vendored' feature to build a static version of OpenSSL.
# See:
#   https://docs.rs/openssl/0.10.26/openssl/#vendored
#   https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#platform-specific-dependencies
#   https://doc.rust-lang.org/reference/conditional-compilation.html#target_env
[target.'cfg(all(target_os = "linux", target_env = "musl"))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }


[features]
default = ["self-update"]
self-update = ["self_update"]
