[package]
name = "xtask"
version = "0.1.0"
authors = ["Nicolas Bigaouette <nbigaouette@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = {version = "0.5", default-features = false, features = ["time", "deflate"]}
