[package]
name = "xtask"
version = "0.1.0"
authors = ["Nicolas Bigaouette <nbigaouette@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
zip = { version = "0.5", default-features = false, features = [
    "time",
    "deflate",
] }
